kubernetes-manifests/sandbox/it-tools/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: it-tools
  annotations:
    external-dns.alpha.kubernetes.io/target: private-ingress.dtlp.cc
spec:
  rules:
    - host: it-tools.dtlp.cc
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: it-tools
spec:
  entryPoints:
    - web-secure
  routes:
    - kind: Rule
      match: Host(`it-tools.dtlp.cc`)
      services:
        - name: it-tools
          kind: Service
          port: 80
  tls: {}
